--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proshop",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node -L backend/server",
     "server": "nodemon backend/server",
@@ -13,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
