--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
