--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node -L backend/server",
+    "start": "node backend/server",
     "server": "nodemon backend/server",
     "client": "cd frontend && yarn start",
     "dev": "concurrently  \"yarn server\" \"yarn client\" ",
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0"
   },
